Add Meta & Change Of Design

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/all.min.css">
 
+<html lang="en">
+    <head>
+       
+        <link rel="stylesheet" href="css/all.min.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style-prefix-min.css">
+        
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Portfolio ">
         <title>Fokir</title>
     </head>
     <body>
@@ -33,7 +39,7 @@
                 <div class="caption-contents">
                 <h3>Hello i'm</h3>
                 <h1>ALEX SMITH</h1>
-                <p>Professional Web Designer</p>
+                <p>Professional Web </p>
                 </div>
             </div>
         </div>
