--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/all.min.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/style-prefix-min.css">
+        <link rel="stylesheet" href="css/style.css">
         
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,7 +55,6 @@
                                 <a href=""><i class="fab fa-twitter"></i></a> 
                                 <a href=""><i class="fab fa-google"></i></a> 
                                 <a href=""><i class="fab fa-github"></i></a> 
-                                
                             </div>
                         </div>
                 </div>
