Add Toggler Icon To Navbar Throw Small Screens

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <title>Fokir</title>
     </head>
     <body>
+        <input type="checkbox" id="check">
         <div id="Home" class="home">
             <div class="navbar">
                 <div class="container">
-                    <div class="navbar-elements">
+                <div class="navbar-elements">
                     <div class="logo">
                         <a href="">Fokir</a>
                     </div>
-                    <div class="links">
-                        <ul>
+                    <ul class="links">
                             <li><a class="a-home" href="#Home">Home</a></li>
                             <li><a href="#About">About</a></li>
                             <li><a href="#Services">Services</a></li>
@@ -30,8 +30,11 @@
                             <li><a href="#Testimonial">Testimonial</a></li>
                             <li><a href="#Blog">Blog</a></li>
                             <li><a href="#Contact">Contact</a></li>
-                        </ul>
-                    </div>
+                    </ul>
+                    <label class="bar" for="check">
+                        <i class="fa fa-bars" id="bars"></i>
+                        <i class="fa fa-times" id="times"></i>
+                    </label>
                 </div>
                 </div>
             </div>
